[gd_scene load_steps=28 format=2]

[ext_resource path="res://Art/Font/NewHiScore.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Player/Sprites/player-Sheet P1.png" type="Texture" id=2]
[ext_resource path="res://Player/Sprites/player-Sheet P3.png" type="Texture" id=3]
[ext_resource path="res://Player/Sprites/player-Sheet P4.png" type="Texture" id=4]
[ext_resource path="res://Player/Sprites/player-Sheet P2.png" type="Texture" id=5]
[ext_resource path="res://World/Levels/MainMenu/Menu.tres" type="Theme" id=6]
[ext_resource path="res://World/Levels/MainMenu/OptionsMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/Levels/MainMenu/MainMenu.gd" type="Script" id=8]
[ext_resource path="res://Art/title.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.815686, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.992157, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.815686, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.996078, 0.329412, 0.435294, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.619608, 0.490196, 1 )

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.0431373, 1, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 1, 0.992157, 1, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.0431373, 1, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.00392157, 0.533333, 0.647059, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.00392157, 0.796078, 0.811765, 1 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.996078, 0.329412, 0.435294, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0.619608, 0.490196, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.996078, 0.329412, 0.435294, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.87451, 0.027451, 0.447059, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.87451, 0.027451, 0.447059, 1 )

[sub_resource type="Animation" id=1]
resource_name = "bounce"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Ducks/Duck1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ducks/Duck2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ducks/Duck3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Ducks/Duck4:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Control" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 6 )
script = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1045, 1496 )
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="Title" type="TextureRect" parent="."]
margin_top = 16.0
margin_right = 330.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 165, 45 )
texture = ExtResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.5
margin_top = -29.0
margin_right = 49.5
margin_bottom = 29.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 99.0
margin_bottom = 58.0

[node name="Fight" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 99.0
margin_bottom = 14.0
focus_neighbour_top = NodePath("../Quit")
theme = ExtResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Fight"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 99.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 15 )
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 36.0
margin_right = 99.0
margin_bottom = 50.0
focus_neighbour_bottom = NodePath("../Fight")
custom_fonts/font = SubResource( 20 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Quit"

[node name="Ducks" type="Node2D" parent="."]

[node name="Duck1" type="Sprite" parent="Ducks"]
position = Vector2( 72, 696 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="Duck2" type="Sprite" parent="Ducks"]
position = Vector2( 24, 696 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
hframes = 2
frame = 1

[node name="Duck3" type="Sprite" parent="Ducks"]
position = Vector2( 1208, 696 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
flip_h = true
hframes = 2
frame = 1

[node name="Duck4" type="Sprite" parent="Ducks"]
position = Vector2( 1256, 696 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
flip_h = true
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bounce = SubResource( 1 )

[node name="OptionsMenu" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="MarginContainer/VBoxContainer/Fight" to="." method="_on_Fight_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
